--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,8 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore -bl:restore.binlog
     - name: Build
+      env:
+        CERTIFICATEPASSWORD: ${{ secrets.CERTIFICATEPASSWORD }}
       run: dotnet build --no-restore -bl:build.binlog
     - name: Test
       run: dotnet test --no-build --verbosity normal
