--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,9 +23,9 @@ jobs:
     - name: Build
       env:
         CERTIFICATEPASSWORD: ${{ secrets.CERTIFICATEPASSWORD }}
-      run: dotnet build --no-restore -bl:build.binlog
+      run: dotnet build -c Release --no-restore -bl:build.binlog
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test -c Release --no-build --verbosity normal
     - name: Show Version
       uses: dotnet/nbgv@master
       id: nbgv
