--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,7 +45,7 @@ jobs:
       if: ${{ github.ref_name == 'main' }}
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "DeployableApp/bin/Debug/Releases/*"
+        artifacts: "DeployableApp/bin/*/Releases/*"
         artifactErrorsFailBuild: true
         commit: ${{ github.ref_name }}
         tag: ${{ steps.nbgv.outputs.SemVer2 }}
