--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,10 +18,17 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
+    - name: Write key file
+      env:
+        CERTIFICATE: ${{ secrets.CERTIFICATE }}
+      run: Set-Content Certificates\DeployableApp.pfx ([Convert]::FromBase64String($env:CERTIFICATE)) -AsByteStream
     - name: Restore, Build, Publish
       env:
         CERTIFICATEPASSWORD: ${{ secrets.CERTIFICATEPASSWORD }}
       run: dotnet publish -c Release --sc -bl:build.binlog
+    - name: Delete key file
+      if: ${{ always() }}
+      run: del Certificates\DeployableApp.pfx
     - name: Test
       run: dotnet test -c Release --no-build --verbosity normal
     - name: Show Version
@@ -29,7 +36,7 @@ jobs:
       id: nbgv
     - run: echo 'SemVer2=${{ steps.nbgv.outputs.SemVer2 }}'
     - name: Upload log files
-      # if: ${{ failure() }}
+      if: ${{ success() || failure() }}
       uses: actions/upload-artifact@v3
       with:
         name: log
