--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,8 @@ jobs:
         key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
         restore-keys: |
           ${{ runner.os }}-nuget-
+    - name: Display .NET information
+      run: dotnet --info
     - name: Import Code Signing Certificate
       env:
         CERTIFICATE: ${{ secrets.CERTIFICATE }}
