--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,7 +53,7 @@ jobs:
         name: squirrel package
         path: '**/Releases/**/*'
     - name: Release
-      if: ${{ github.ref_name == 'main' }}
+      if: ${{ github.ref_name == 'main' || startsWith(github.ref_name, 'v') }}
       uses: ncipollo/release-action@v1
       with:
         artifacts: "DeployableApp.Publish/bin/*/Releases/*"
